# QuantMeta

./: .gitignore  README.md  Snakefile-downsample  Snakefile-failure_standards  Snakefile-map_standards  Snakefile-quant_targets  Snakefile-quant_targets_all_linear_regs  Snakefile-quantmeta  confident_detection_regression_builder.Rmd  pyproject.toml  quant_correct_regression_builder.Rmd
Assembly/: README
Config/: README  cluster.yaml  config.yaml  config_example_samples.yaml
Envs/: R.yaml  README  bioawk.yaml  bowtie2.yaml  downsample.yaml  mutation-simulator.yaml
Map_Indexes/: HM1_lengths.txt  Langenfeld_2022_standards.2.bt2  Langenfeld_2022_standards.3.bt2  Langenfeld_2022_standards.4.bt2  Langenfeld_2022_standards.fasta  Langenfeld_2022_standards.rev.2.bt2  README
Map_Indexes/fail_standards_r1/: fail_standards_lengths.txt
REVAMP/: detection_threshold_generator.sh  quant_targets.sh  standard_curve_generator.sh
Reads/: README
Sample_Characteristics/: README  example_sample_extraction_info.txt
Scripts/: README  organize_mapping.R  quant_unknowns.R  quant_unknowns_all_linear_regs.R  quantmeta.R  quantmeta_summary_regression.R
Spike-ins/: README  STD_MIXES.txt  Snakefile-downsample  Snakefile-failure_standards  Snakefile-quantmeta  confident_detection_regression_builder.Rmd  example_sample_info.txt  example_stds_ddPCR_conc.txt  quant_correct_regression_builder.Rmd
hpc_submission/: downsample_hpc_run.sh  failure_standards_hpc_run.sh  map_standards_hpc_run.sh  quant_targets_all_linear_regs_hpc_run.sh  quant_targets_hpc_run.sh  quantmeta_hpc_run.sh
(+101 files in other folders)
