[project]
name = "quantmeta"
version = "2.0.1"
description = "QuantMeta determines the absolute abundance of targets in metagenomes spiked with synthetic DNA standards. The tool accurately quantifies targets by establishing (1) entropy-based detection thresholds to confidently determine the presence of targets, and (2) an approach to identify and correct read mapping or assembly errors."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "biopython>=1.87",
    "matplotlib>=3.10.8",
    "mutation-simulator>=3.0.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "path>=17.1.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seqtk>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantmeta = [
    "data/Config/*.txt",
    "data/Spike-ins/*.txt",
    "data/Map_Indexes/*.fasta",
    "data/Regressions/detection/*.json",
    "detection_threshold/*.sh",
    "standard_curve/*.sh",
    "quant_targets/*.sh",
]

[project.scripts]
detection-threshold = "quantmeta.detection_threshold.run_sh:main"
standard-curve = "quantmeta.standard_curve.run_sh:main"
quant-targets = "quantmeta.quant_targets.run_sh:main"